13-12-2013 4.2.29
- Disallow deleting system folders through files module
- Auto loader improved

29-11-2013 4.2.28
- Raised post address 2 field to 100 chars
- When someone other the the ticket agent add a new message to the ticket it will be marked as unseen
- Zpushadmin can now also work with zpush2.1
- Projects templates fix: Also use 'days offset' in task action.
- Fixed refreshing Favorites calendar display after permission change
- Added permissions option to multiselect dialog

30-10-2013 4.2.27
- Fixed problem with emailing files from the scanbox and then change the template of the email.
- Show birthdays of calendar owner instead of logged in user
- GOTA uses GET parameters and has permissions attribute in manifest
- JUpload has permissions attribute
- New resource could have wrong permissions initially
- Imageview didn't want to resize image

24-10-2013 4.2.26
- Rebuild GOTA with permissions attribute in manifest
- Saving settings cleared addresslists when this tab was not selected and activated in the settings
- Fixed SMIME Message view with clear text disabled
- Add timestamps to backup jobs

17-10-2013 4.2.25
- Billing: Order PDF - Extra spacing in top after Page Break, if logo is on every page.
- Carddav supports viewing readonly address books
- Fixed Contact pictures of VCards base64 encoding for older vObject libraries
- Don't include inactive users in e-mail search
- Signed JUpload java applet
- JUpload fixed for IE
- It was possible to create an event without organizer
- Include companies in e-mail search
- Ask for meeting request invitation when new participant was added

10-10-2013 4.2.24
- Disable file manager until upload is complete to avoid change of folder while uploading
- Contact info panel could crash when appointments were attached
- Added default parameter to FilesearchController::getStoreColumnModel  so it will be compatible with the AbstractModelController